--- a/src/app/main/components/three-day-forecast/three-day-forecast.component.html
+++ b/src/app/main/components/three-day-forecast/three-day-forecast.component.html
@@ -10,7 +10,7 @@
     <div class="card-body">
       <h5 class="card-title">{{ item.temp | number : "1.0-0" }}°C</h5>
       <img class="img-size" src="{{ item.icon | weatherImg }}" alt="" />
-      <p class="card-text">
+      <p class="card-text text-center">
         {{ item.conditions }}
       </p>
     </div>
