--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -19,12 +19,13 @@
 <!-- ! SECTION -->
 <div *ngIf="weatherNow; else instructions">
   <div class="row mb-2 combinesBoth">
-    <div class="combinesTitleAndCard col-12 col-md-4">
+    <div class="combinesTitleAndCard col-12 col-md-3">
       <!-- * MAIN-HEADING -->
 
       <div class="mb-3">
         <h2>{{ location.name }}</h2>
         <h6>{{ currentTime | date : "EEEE dd MMMM, HH:mm" }}</h6>
+        <hr />
       </div>
 
       <!-- * MAIN-CARD-WEATHER-INFO -->
@@ -45,11 +46,13 @@
 
   <!-- * 5-DAY-FORECAST -->
 
-  <div>
-    <h5>5 day forecast:</h5>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <h5>5 day forecast:</h5>
 
-    <app-five-day-forecast
-      [fetched5dayWeatherData]="fetched5dayWeatherData"
-    ></app-five-day-forecast>
+      <app-five-day-forecast
+        [fetched5dayWeatherData]="fetched5dayWeatherData"
+      ></app-five-day-forecast>
+    </div>
   </div>
 </div>
