--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,7 +1,15 @@
-<input
-  class="form-control"
-  type="text"
-  #txtSearchInput
-  (keyup.enter)="valueEmitter(txtSearchInput.value)"
-  [placeholder]="barPlaceholder"
-/>
+<div class="d-flex">
+  <input
+    class="form-control"
+    type="text"
+    #txtSearchInput
+    (keyup.enter)="valueEmitter(txtSearchInput.value)"
+    [placeholder]="barPlaceholder"
+  />
+  <button
+    class="btn btn-primary btnEdited"
+    (click)="valueEmitter(txtSearchInput.value)"
+  >
+    Search
+  </button>
+</div>
