--- a/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
+++ b/src/app/main/pages/weather-info-main-page/weather-info-main-page.component.html
@@ -23,7 +23,7 @@
       <!-- * MAIN-HEADING -->
 
       <div class="mb-3">
-        <h2>{{ location.name }}</h2>
+        <h2>{{ location?.name }}</h2>
         <h6>{{ currentTime | date : "EEEE dd MMMM, HH:mm" }}</h6>
         <hr />
       </div>
