--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -7,7 +7,7 @@
     [placeholder]="barPlaceholder"
   />
   <button
-    class="btn btn-primary btnEdited"
+    class="btn btn-outline-primary btnEdited"
     (click)="valueEmitter(txtSearchInput.value)"
   >
     Search
